# slam_legion

./: README.md  cmake.md
ch3/examples/: CMakeLists.txt  README.MD  coordinateTransform.cpp  plotTrajectory.cpp
ch3/useEigen/: eigenMatrix.cpp
ch3/useGeometry/: CMakeLists.txt  eigenGeometry.cpp
ch3/visualizeGeometry/: CMakeLists.txt  README.md  visualizeGeometry.cpp
ch4/: CMakeLists.txt  README.md  useSophus.cpp
ch4/example/: CMakeLists.txt  trajectoryError.cpp
ch5/imageBasics/: CMakeLists.txt  README.md  imageBasics.cpp  undistortImage.cpp
ch5/rgbd/: CMakeLists.txt  README.md  joinMap.cpp
ch5/stereo/: README.md  stereoVision.cpp
ch6/: CMakeLists.txt  README.md  ceresCurveFitting.cpp  g2oCurveFitting.cpp  gaussNewton.cpp
ch7/: CMakeLists.txt  README.md  orb_cv.cpp  orb_self.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp
